- change interface and method name.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div style="width:100%;" class="buttonHolder">
     <br />
     <div style="font-size:30px; font-family:'Trebuchet MS', Arial, Helvetica, sans-serif">Please show this to code to the staff</div>
-    <input type="button" value="Redeemed" class="btn" onClick="interface.callFromJS()" />
+    <input type="button" value="Redeemed" class="btn" onClick="androidInterface.onRedeemedButtonClick()" />
 </div> 
 <script>
 document.getElementById("code").innerHTML = "Reward Code: shot" + makeid();
